codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Charging (0s • esc to interr
                              
                              
› Ask xcodex to do anything   
                              
  100% context left · ? for sh
